# pytorch-template

./: LICENSE  README.md  README_JA.md  pyproject.toml  ruff.toml
docs/image/: classes.plantuml  packages.plantuml
docs/source/: conf.py
docs/source/locale/ja/LC_MESSAGES/: dataset.mo  dataset.po  eval.mo  eval.po  index.mo  lib.callbacks.mo  lib.callbacks.po  lib.common.mo  lib.common.po  lib.data.mo  lib.data.po  lib.loss.mo  lib.loss.po  lib.metrics.mo  lib.metrics.po  lib.mo  lib.model.mo  lib.model.po  lib.optimizer.mo  lib.optimizer.po  lib.po  train.mo  train.po
src/: dataset.py  eval.py  train.py
src/lib/callbacks/: setup.py
src/lib/common/: process.py  types.py
src/lib/data/: base.py  cifar.py  mnist.py  processor.py
src/lib/loss/: setup.py
src/lib/metrics/: setup.py
src/lib/model/: base.py  layer.py  setup.py  simple.py
src/lib/optimizer/: setup.py
src/param/: param_eval.yaml  param_train.yaml
template_pytorch/lib/common/: define.py
template_pytorch/lib/data/: base.py  cifar.py  mnist.py
template_pytorch/lib/model/: base.py  layer.py  simple.py
template_pytorch/param/tutorial/: param_eval.yaml  param_train.yaml
tests/: define.py  test_dataset.py  test_eval.py  test_train.py
tests/data/result/: epoch=000_loss=1.429_val_loss=0.809.ckpt  epoch=001_loss=0.654_val_loss=0.527.ckpt
tests/data/result/version_0/: metrics.csv
tests/lib/callbacks/: test_setup.py
tests/lib/common/: test_decorator.py  test_file.py  test_log.py  test_process.py
tests/lib/data/: test_base.py  test_cifar.py  test_mnist.py  test_processor.py  test_setup.py
tests/lib/loss/: test_setup.py
tests/lib/metrics/: test_setup.py
tests/lib/model/: test_base.py  test_layer.py  test_setup.py  test_simple.py
tests/lib/optimizer/: test_setup.py
