[project]
name = "pytorch-template"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tomlkit>=0.13.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "webdataset>=0.2.111",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "types-pyyaml>=6.0.12.20250516",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-intl>=2.3.1",
    "sphinx-rtd-theme>=3.0.2",
]
